  * raggle: remove delicious support (won't work because of raggle's
	  old Net::HTTP semantics.  once we fix that then we can add it back
		in)
  * raggle: increment version to 0.4.1-test
  * raggle: add unicode and html entity lookup tables

* Fri Jun 17 02:29:20 2005, pabs <pabs@pablotron.org>
  * AUTHORS: add Narayanan and Michael
  * README: add Reporting Bugs section
  * README: minor updates to my URLs
  * README: increment version number to 0.4.1
  * BUGS: mark off old bugs
  * COPYING: add 2005 to copyright notice
  * raggle: ditto
  * TODO: mark some old stuff off

* Fri Jun 17 02:48:59 2005, pabs <pabs@pablotron.org>
  * raggle: fix host-relative URLs using URI (Fixes: #17)

* Fri Jun 17 03:53:57 2005, pabs <pabs@pablotron.org>
  * raggle: don't require a browser, but disable opening links if
    one doesn't exist (Fixes: #14)

* Wed Jun 22 15:08:00 2005, redshift <redshift@halffull.org>
  * raggle: fix r/R for feeds without a priority

* Mon Jun 27 16:31:20 2005, pabs <pabs@pablotron.org>
  * raggle.pod: 0.3 => 0.4 (oops!)

* Mon Jun 27 16:38:54 2005, pabs <pabs@pablotron.org>
  * README: remove rubilicious from list of optional dependencies
  * raggle: change version to 0.4.1
  * doc/default_config.rb: regenerated
  * po/en_US.po: updated version, mod date

* Tue Aug 09 01:11:47 2005, pabs <pabs@pablotron.org>
  * raggle: incremented version to 0.5.0-pre
  * README: ditto
  * raggle: protect against merging invalid URL segments (based on patch
    from Michael Ablassmeier (Fixes: #36 and Fixes: #40)
  * BUGS: update information on Michael 

* Tue Aug 09 01:45:46 2005, pabs <pabs@pablotron.org>
  * raggle: improve SSL support (turn off verify peer mode, make sure
    port is set to 443 instead of 80, improve comments about what's
    going on)
  * TODO: add note about improving SSL support at some point

* Tue Aug 09 01:48:34 2005, pabs <pabs@pablotron.org>
  * ChangeLog: add references to bug tracker IDs
  * BUGS: add note about bug tracking interface